--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@discordjs/form-data": "^3.0.1",
     "@sapphire/async-queue": "^1.1.4",
     "@types/ws": "^7.4.7",
+    "@ungap/url-search-params": "^0.2.2",
+    "cross-fetch": "^3.1.4",
     "discord-api-types": "^0.22.0",
     "node-fetch": "^2.6.1",
     "ws": "^7.5.1"
