--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
     "@discordjs/form-data": "^3.0.1",
+    "@ungap/url-search-params": "^0.2.2",
     "abort-controller": "^3.0.0",
+    "cross-fetch": "^3.1.4",
     "node-fetch": "^2.6.1",
     "prism-media": "^1.2.9",
     "setimmediate": "^1.0.5",
